feat(exporters): added node_exporter

--- a/prometheus/defaults.yaml
+++ b/prometheus/defaults.yaml
@@ -9,3 +9,7 @@ prometheus:
   service:
     name: prometheus
     sysrc: False
+  exporters:
+    node:
+      pkg: prometheus-node-exporter
+      service: prometheus-node-exporter
