--- a/pillar.example
+++ b/pillar.example
@@ -62,3 +62,8 @@ prometheus:
 
         static_configs:
         - targets: ['localhost:9090']
+
+  exporters:
+    node:
+      args:
+        web.listen-address: ":9110"
