--- a/prometheus/osfamilymap.yaml
+++ b/prometheus/osfamilymap.yaml
@@ -10,6 +10,10 @@
 # you will need to provide at least an empty dict in this file, e.g.
 # osfamilymap: {}
 ---
+{%- if grains.os == 'MacOS' %}
+  {% set macos_group = salt['cmd.run']("stat -f '%Sg' /dev/console") %}
+{%- endif %}
+
 Debian:
   args_file: /etc/default/prometheus
   exporters:
@@ -41,4 +45,5 @@ Solaris: {}
 
 Windows: {}
 
-MacOS: {}
+MacOS:
+  rootgroup: {{ macos_group | d('') }}
