feat(repository): add support for pkgrepo.managed
BREAKING CHANGE: the variable 'pkg' was renamed 'pkg.name',
  update your pillars

--- a/pillar.example
+++ b/pillar.example
@@ -2,7 +2,8 @@
 # vim: ft=yaml
 ---
 prometheus:
-  pkg: prometheus
+  pkg:
+    name: prometheus
   config_file: /etc/prometheus/prometheus.yml
   service:
     name: prometheus
