--- a/test/integration/default/inspec.yml
+++ b/test/integration/default/inspec.yml
@@ -4,9 +4,9 @@ maintainer: Alexander Weidinger
 license: Apache-2.0
 summary: Verify that the prometheus formula is setup and configured correctly
 supports:
-  - os-name: debian
-  - os-name: ubuntu
-  - os-name: centos
-  - os-name: fedora
-  - os-name: opensuse
-  - os-name: freebsd
+  - platform-name: debian
+  - platform-name: ubuntu
+  - platform-name: centos
+  - platform-name: fedora
+  - platform-name: opensuse
+  - platform-name: freebsd
