fix(repo): use_upstream_repo corrections; separate users state
BREAKING CHANGE:

The formula has been refactored to accomodate multiple packages,
archives, users, and repos. Update your pillars and top states

--- a/pillar.example
+++ b/pillar.example
@@ -6,6 +6,8 @@ prometheus:
     - prometheus
     - pushgateway
     - node_explorer
+    # no memcached_exporter in upstream repo - only archive
+    # memcached_exporter
 
   use_upstream_repo: False
   use_upstream_archive: True
