chore: use `semantic-release` cross-formula standard structure
* Automated using `ssf-formula` (v0.1.0-rc.1)

--- a/test/integration/default/inspec.yml
+++ b/test/integration/default/inspec.yml
@@ -1,6 +1,6 @@
-name: prometheus
-title: Prometheus Formula
-maintainer: Alexander Weidinger
+name: default
+title: prometheus formula
+maintainer: SaltStack Formulas
 license: Apache-2.0
 summary: Verify that the prometheus formula is setup and configured correctly
 supports:
@@ -9,4 +9,6 @@ supports:
   - platform-name: centos
   - platform-name: fedora
   - platform-name: opensuse
+  - platform-name: suse
   - platform-name: freebsd
+  - platform-name: amazon
