--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ coverage.xml
 .hypothesis/
 .kitchen
 .kitchen.local.yml
+kitchen.local.yml
+junit-*.xml
 
 # Translations
 *.mo
@@ -102,5 +104,19 @@ ENV/
 # mypy
 .mypy_cache/
 
+# Bundler
+Gemfile.lock
+
 # copied `.md` files used for conversion to `.rst` using `m2r`
 docs/*.md
+
+# Vim
+*.sw?
+
+## Collected when centralising formulas (check and sort)
+# `collectd-formula`
+.pytest_cache/
+/.idea/
+Dockerfile.*_*
+ignore/
+tmp/
