--- a/pillar.example
+++ b/pillar.example
@@ -76,7 +76,9 @@ prometheus:
         alertmanagers:
           - static_configs:
               - targets:
-              #     - alertmanager:9093
+                  - alertmanager1:9093
+                  - alertmanager2:9093
+                  - alertmanager3:9093
 
       # Load rules once and periodically evaluate them according to the global
       # 'evaluation_interval'.
