--- a/prometheus/defaults.yaml
+++ b/prometheus/defaults.yaml
@@ -21,16 +21,21 @@ prometheus:
     var: /var/lib/prometheus
     args: /etc/default
     service: /usr/lib/systemd/system
+    textfile_collectors: /opt/prometheus/textfile_collectors
 
   service:
     prometheus:
       args:
         web.listen-address: 0.0.0.0:9090
     alertmanager: {}
+    node_exporter:
+      args:
+        collector.textfile.directory: /var/tmp/node_exporter
 
   config:
     prometheus: {}
     alertmanager: {}
+    node_exporter: {}
 
   pkg:
     prometheus:
@@ -113,3 +118,8 @@ prometheus:
 
   linux:
     altpriority: 0   ## 'Alternatives system' priority: zero disables (default)
+
+  exporters:
+    node_exporter:
+      textfile_collectors_dependencies: []
+      textfile_collectors: {}
