feat(textfile_collectors): added smartmon textfile collector

--- a/pillar.example
+++ b/pillar.example
@@ -173,3 +173,8 @@ prometheus:
           # You must enable individual collectors
           enable: true
           # pkg: ipmitool
+        smartmon:
+          enable: true
+          # pkg: smartmontools
+          # bash_pkg: bash
+          # smartctl: /usr/sbin/smartctl
