fix(config): cope with aberrant service names

--- a/prometheus/osfamilymap.yaml
+++ b/prometheus/osfamilymap.yaml
@@ -10,7 +10,14 @@
 # you will need to provide at least an empty dict in this file, e.g.
 # osfamilymap: {}
 ---
-Debian: {}
+Debian:
+  pkg:
+    node_exporter:
+      name: prometheus-node-exporter
+      args_file: /etc/default/prometheus-node-exporter
+  service:
+    node_exporter:
+      name: prometheus-node-exporter
 
 RedHat:
   pkg:
