--- a/pillar.example
+++ b/pillar.example
@@ -11,7 +11,7 @@ prometheus:
     # no memcached_exporter in upstream repo - only archive
     # memcached_exporter
 
-  use_upstream_archive: False
+  use_upstream_archive: true
      {%- if grains.os_family in ('CentOS',) %}
   use_upstream_repo: False
      {%- endif %}
@@ -58,6 +58,8 @@ prometheus:
     source_files:
       prometheus-config-file-file-managed:
         - 'alt_config.yml.jinja'
+      prometheus-archive-install-managed-service:
+        - 'alt_systemd.ini.jinja'
 
   # Pillar-based config
   config:
