--- a/prometheus/defaults.yaml
+++ b/prometheus/defaults.yaml
@@ -20,6 +20,7 @@ prometheus:
     etc: /etc/prometheus
     var: /var/lib/prometheus
     args: /etc/default
+    args_setting: ARGS
     service: /usr/lib/systemd/system
     textfile_collectors: /opt/prometheus/textfile_collectors
 
