fix: rework to implement environment variables handling
Developed environ.sh.jinja and added test pillar data to default
Corrected prometheus.config.environ
Switched default test pillar to use none archive - due to deployment of custom service
Disabled a number of exporters following switch from archive due to failing - to be reviewed
Corrected prometheus environ_file location

Resolves: #59

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -7,6 +7,8 @@ driver:
   use_sudo: false
   privileged: true
   run_command: /lib/systemd/systemd
+  forward:
+    - 9090:9090
 
 platforms:
   ## SALT `tiamat`
@@ -350,7 +352,7 @@ suites:
       state_top:
         base:
           '*':
-            - prometheus._mapdata
+            # - prometheus._mapdata
             - prometheus
       pillars:
         top.sls:
