--- a/kitchen.yml
+++ b/kitchen.yml
@@ -7,9 +7,6 @@ driver:
   use_sudo: false
   privileged: true
   run_command: /lib/systemd/systemd
-  forward:
-    - 9090:9090
-    - 9110:9110
 
 platforms:
   ## SALT `tiamat`
@@ -353,7 +350,7 @@ suites:
       state_top:
         base:
           '*':
-            # - prometheus._mapdata
+            - prometheus._mapdata
             - prometheus
       pillars:
         top.sls:
