--- a/prometheus/defaults.yaml
+++ b/prometheus/defaults.yaml
@@ -46,6 +46,8 @@ prometheus:
         config: {}
         environ_file: /etc/default/prometheus-alertmanager
         environ: {}
+        # These service args will not impact installs using the non archive method and
+        # instead should be added as environ args in such a case
         service:
           args:
             config.file: /etc/prometheus/alertmanager.yml
@@ -135,6 +137,8 @@ prometheus:
         environ: {}
         config_file: /etc/prometheus/node_exporter.yml
         config: {}
+        # These service args will not impact installs using the non archive method and
+        # instead should be added as environ args in such a case
         service:
           args:
             collector.textfile.directory: /var/tmp/node_exporter
@@ -154,6 +158,8 @@ prometheus:
         config: {}
         environ_file: /etc/default/prometheus
         environ: {}
+        # These service args will not impact installs using the non archive method and
+        # instead should be added as environ args in such a case
         service:
           args:
             config.file: /etc/prometheus/prometheus.yml
