feat(suse): support packaged installations
- add all components available in the default openSUSE Leap (OSS)
  repository to osfamilymap
- introduce global manage_user_group toggle to prevent the formula from
  changing users and groups managed by system packages
- allow configuration file override using
  pkg:component:<component>:config_file

Signed-off-by: Georg Pfuetzenreuter <mail@georg-pfuetzenreuter.net>

--- a/prometheus/defaults.yaml
+++ b/prometheus/defaults.yaml
@@ -23,6 +23,8 @@ prometheus:
     tmp: /tmp/prometheus
     var: /var/lib/prometheus
 
+  manage_user_group: true
+
   pkg:
     uri: https://github.com/prometheus
     use_upstream_repo: false
